[Styles] Wrapping mode selector's labels in a container. Trying to fix mobile performance issues.

--- a/src/sass/components/_ModeSelector.scss
+++ b/src/sass/components/_ModeSelector.scss
@@ -16,17 +16,25 @@
     border: none;
     margin: 0 auto;
   }
+  &__container {
+    width: 100%;
+    animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  }
   &__radio-input {
     display: none;
     &:checked + .mode-selector__label {
-      @extend .checked;
+      background-color: #06d6a0;
+      color: $text-color-light;
+      border: 4px solid $text-color-light;
+      // transform: translateZ(0) (0, -10px);
+      // transition: transform 0.15s ease;
     }
   }
   &__radio-input--locked {
     display: none;
     &:checked + .locked {
-      transform: translateZ(0) translate(0, -10px) ;
-      transition: transform 0.15s ease;
+      // transform: translateZ(0) translate(0, -10px) ;
+      // transition: transform 0.15s ease;
       background-color: rgba(128, 128, 128);
       color: $text-color-light;
       border: 4px solid $text-color-light;
@@ -60,10 +68,6 @@
     }
   }
   &__btn {
-    // position: absolute;
-    // bottom: 3%;
-    // right: 18%;
-    // z-index: 2;
     display: none;
     font-family: $font-mochiy-pop-p-one;
     font-size: 1.175rem;
@@ -86,19 +90,11 @@
   color: rgb(32, 31, 31);
   border: 1px solid rgba(255, 255, 255, 0.18);
   p {
-         align-self: center;
-       }
-       .mode-selector__label-icon {
-         display: block;
-       }
-}
-
-.checked {
-  background-color: #06d6a0;
-  color: $text-color-light;
-  border: 4px solid $text-color-light;
-  transform: translateZ(0) (0, -10px);
-  transition: transform 0.15s ease;
+    align-self: center;
+  }
+  .mode-selector__label-icon {
+    display: block;
+  }
 }
 
 .active {
@@ -115,11 +111,11 @@
   width: 100%;
   height: 12%;
   background: rgba(255, 85, 114, 0.6);
-  animation: slide-in-bottom 0.25s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  animation: slide-in-bottom 0.25s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
 
-@for $i from 1 through 12 {
-  .mode-selector__label:nth-child(#{$i}) {
+@for $i from 1 through 6 {
+  .mode-selector__container:nth-child(#{$i}) {
     animation-delay: 0.075s + $i * 0.1s;
   }
 }
